# measurator

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
git_hooks/: pre-commit
measurator/: __init__.py  console.py  domain.py  main.py
measurator/tests/: example.csv  example2.csv  test_main.py  test_main.test_add_prediction.approved.md  test_main.test_add_prediction.approved.txt  test_main.test_add_prediction_new_format.approved.md  test_main.test_add_prediction_new_format.approved.txt  test_main.test_approve.approved.txt  test_main.test_empty_file_add_prediction.approved.md  test_main.test_empty_file_add_prediction.approved.txt  test_main.test_empty_file_no_predictions.approved.md  test_main.test_empty_file_no_predictions.approved.txt  test_main.test_list_predictions.approved.md  test_main.test_list_predictions.approved.txt  test_main.test_no_predictions.approved.md  (+13 more)
tests/: example.csv  test_main.py  test_main.test_add_prediction.approved.md  test_main.test_add_prediction_new_format.approved.md  test_main.test_empty_file_add_prediction.approved.md  test_main.test_empty_file_no_predictions.approved.md  test_main.test_list_predictions.approved.md  test_main.test_no_predictions.approved.md  test_main.test_reject_invalid_prediction_date_format.approved.md  test_main.test_reject_prediction_date_in_past.approved.md  test_main.test_validate_prediction_delay.approved.md  test_main.test_validate_prediction_false.approved.md  test_main.test_validate_prediction_reject.approved.md  test_main.test_validate_prediction_true.approved.md
