[project]
name = "measurator"
version = "0.4"
description = "Simple command-line app aimed to record and evaluate measures"
authors = [
    {name = "Andrey Hitrin",email = "andrey.hitrin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
measure = "measurator.main:run_main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
approvaltests = "^14.5.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
